# Ecommerce-Drf

./: .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
account/: admin.py  models.py
account/api/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
cart/: admin.py  models.py
cart/api/: serializers.py  urls.py  views.py
cart/api/tests/: conftest.py  test_cart_items.py  test_carts.py
cart/migrations/: 0001_initial.py
comment/: admin.py  models.py
comment/api/: serializers.py  urls.py  views.py
comment/api/tests/: conftest.py  test_comments.py
comment/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
nginx/: nginx.conf
order/: admin.py  models.py
order/api/: permissions.py  serializers.py  tasks.py  urls.py  views.py
order/api/tests/: test_orders.py
order/migrations/: 0001_initial.py
product/: admin.py  models.py
product/api/: filters.py  serializers.py  urls.py  views.py
product/api/tests/: conftest.py  test_categories.py  test_products.py
product/migrations/: 0001_initial.py
