[tool.poetry]
name = "drf-ecommerce"
version = "0.1.0"
description = ""
authors = ["Shayan-9248 <shayan.aimoradii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
black = "^22.3.0"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
drf-nested-routers = "^0.93.4"
djangorestframework-simplejwt = "^5.1.0"
django-filter = "^21.1"
python-decouple = "^3.6"
Pillow = "^9.1.0"
psycopg2 = "^2.9.3"
pytest-django = "^4.5.2"
pylint = "^2.13.8"
pre-commit = "^2.19.0"
celery = "^5.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
